--- a/css/style.css
+++ b/css/style.css
@@ -586,43 +586,21 @@ footer {
 
 @media screen and (max-width: 480px) {
   .main {
-    margin-top: 20px;
-    width: 100vw;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: "pro" "semipro" "wallmount"; }
+    margin-top: 20px; }
     .main .main__productos {
-      width: 80vw;
-      margin: 25px auto; }
+      width: 95vw; }
       .main .main__productos img {
         width: 95vw;
         height: 400px;
         border-radius: 6px; }
-      .main .main__productos .main__productos--info {
-        width: 100vw;
-        margin: 15px 0; }
-        .main .main__productos .main__productos--info h3 {
-          font-size: 1.2em; }
-        .main .main__productos .main__productos--info p {
-          font-size: 0.85em; }
   .main_cardio {
-    width: 90vw;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas: "pro" "semipro" "wallmount" "p4"; }
+    margin-top: 20px; }
     .main_cardio .main__productos {
-      width: 90vw;
-      margin: 15px auto; }
+      width: 95vw; }
       .main_cardio .main__productos div.main__productos--imagen img {
-        width: 400px;
-        height: 400px; }
-      .main_cardio .main__productos div.main__productos--info {
-        width: 90vw;
-        margin: 15px 0; }
-        .main_cardio .main__productos div.main__productos--info h3 {
-          font-size: 1.2em; }
-        .main_cardio .main__productos div.main__productos--info p {
-          font-size: 0.85em; } }
+        width: 95vw;
+        height: 400px;
+        border-radius: 6px; } }
 
 .mainCompras {
   display: grid; }
