--- a/scss/_paginas.scss
+++ b/scss/_paginas.scss
@@ -283,66 +283,31 @@
 @media screen and (max-width: 480px) {
   .main {
     margin-top: 20px;
-    width: 100vw;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: "pro" "semipro" "wallmount";
 
     .main__productos {
-      width: 80vw;
-      margin: 25px auto;
+      width: 95vw;
 
       img {
         width: 95vw;
         height: 400px;
         border-radius: 6px;
       }
-
-      .main__productos--info {
-        width: 100vw;
-        margin: 15px 0;
-
-        h3 {
-          font-size: 1.2em;
-        }
-
-        p {
-          font-size: 0.85em;
-        }
-      }
     }
   }
 
   .main_cardio {
-    width: 90vw;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas: "pro" "semipro" "wallmount" "p4";
+    margin-top: 20px;
 
     .main__productos {
-      width: 90vw;
-      margin: 15px auto;
+      width: 95vw;
 
       div.main__productos--imagen {
         img {
-          width: 400px;
+          width: 95vw;
           height: 400px;
+          border-radius: 6px;
         }
-      }
-    
-      div.main__productos--info {
-        width: 90vw;
-        margin: 15px 0;
-        
-        h3 {
-          font-size: 1.2em;
-        }
-  
-        p {
-          font-size: 0.85em;
-        }
-
-      }    
+      }   
     }
   }
 }
