--- a/scss/_compras.scss
+++ b/scss/_compras.scss
@@ -435,7 +435,7 @@
 
     // Imagenes de las pags de compra
 
-    .mainCompras__imagenProductos {
+    .mainCompras__imagenProductos , .mainCompras__imagenProductos--plates {
       display: none;
     }
 
@@ -446,43 +446,7 @@
         height: 50vw;
       }
     }
-  
-    .mainCompras__imagenProductos--plates {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: repeat(4, 1fr);
-      grid-template-areas:
-        "div1" "div2" "div3" "div4";
-      gap: 10px;
-  
-      .mainCompras__imagenProductos--div1 {
-  
-        img {
-          width: 60%;
-        }
-      }
-  
-      .mainCompras__imagenProductos--div2 {
-  
-        img {
-          width: 60%;
-        }
-      }
-  
-      .mainCompras__imagenProductos--div3 {
-  
-        img {
-          width: 60%;
-        }
-      }
-  
-      .mainCompras__imagenProductos--div4 {
-  
-        img {
-          width: 60%;
-        }
-      }
-    }
+
     // Imagen dominadas
     
     .mainCompras__imagenProductos--dominadas {
