--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,17 +17,15 @@ body {
   overflow-x: hidden;
   line-height: 1;
   font-weight: 200;
+  &::-webkit-scrollbar {
+    background-color: black;
+    width: 10px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: red;
+    border-radius: 10px;
+  }
 }
 
-/* Scrollbar */
 
-body::-webkit-scrollbar {
-  background-color: black;
-  width: 10px;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: red;
-  border-radius: 10px;
-}
 
