--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,7 @@
+@mixin centrar {
+  justify-content: center;
+  align-items: center;
+}
 // Menu - Header
 
 header {
@@ -30,11 +34,10 @@ header {
   .header__logo {
     height: 60px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    @include centrar();
     img {
-      width: 35px;
-      height: 35px;
+      width: 45px;
+      height: 45px;
     }
   }
 
