--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -168,7 +168,7 @@ header {
       background-color: rgb(21, 21, 21);
       width: 105%;
       margin-left: -105%;
-      transition: all 0.8s;
+      transition: .5s;
       z-index: 50;
 
       ul {
