--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,3 +1,5 @@
+$rojo : rgb(255,0,0);
+
 // Footer
 
 footer {
@@ -13,7 +15,7 @@ footer {
     .contactenos {
       h3 {
         margin-top: 30px;
-        color: red;
+        color: $rojo;
       }
   
       .contactenos__formulario {
@@ -72,7 +74,7 @@ footer {
           }
   
           &::-webkit-scrollbar-thumb {
-            background: red;
+            background: $rojo;
             border-radius: 10px;
           }
         }
@@ -81,7 +83,7 @@ footer {
         .contactenos__formulario--inputSend {
           width: 150px;
           padding: 0.5rem;
-          background-color: red;
+          background-color: $rojo;
           border: 1px solid black;
           color: white;
           font-size: 0.7em;
@@ -105,7 +107,7 @@ footer {
       margin-top: 30px;
   
       h3 {
-        color: red;
+        color: $rojo;
         margin-bottom: 22px;
       }
   
@@ -121,7 +123,7 @@ footer {
       margin-top: 30px;
   
       h3 {
-        color: red;
+        color: $rojo;
         margin-bottom: 22px;
       }
   
