--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,4 +1,6 @@
 $rojo: rgb(255,0,0);
+$negro: rgb(21,21,21);
+$gris: rgba(78,78,78, .8);
 
 @mixin centrar {
   justify-content: center;
@@ -8,7 +10,7 @@ $rojo: rgb(255,0,0);
 
 header {
   width: 100vw;
-  background-color: rgb(21, 21, 21);
+  background-color: $negro;
   display: flex;
   justify-content: space-evenly;
 
@@ -24,7 +26,7 @@ header {
     height: 55px;
     &:hover {
       cursor: pointer;
-      background-color: grey;
+      background-color: $gris;
     }
     img {
       width: 35px;
@@ -88,7 +90,7 @@ header {
           position: absolute;
           left: -1px;
           display: none;
-          background-color: rgb(21, 21, 21);
+          background-color:$negro;
           color: white;
           z-index: 60;
           width: max-content;
@@ -113,7 +115,7 @@ header {
 .main__titulo {
   width: 100vw;
   height: 30px;
-  background-color: rgb(21, 21, 21);
+  background-color: $negro;
   display: flex;
   @include centrar();
   position: sticky;
@@ -165,7 +167,7 @@ header {
       position: absolute;
       top: 55px;
       left: -25px;
-      background-color: rgb(21, 21, 21);
+      background-color: $negro;
       width: 105%;
       margin-left: -105%;
       transition: .5s;
