--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -51,7 +51,7 @@ $rojo: rgb(255,0,0);
       }
   
       button {
-        background-color: red;
+        background-color: $rojo;
         border: 1px solid black;
         border-radius: 5px;
         font-size: 1.2rem;
