--- a/scss/_compras.scss
+++ b/scss/_compras.scss
@@ -197,6 +197,7 @@
     grid-template-columns: 800px 800px;
     grid-template-rows: 1fr;
     gap: 40px;
+    line-height: 1.5;
 
     .mainCompras__descripcionProducto--texto {
       h3 {
